--- a/papers/Visual Diagnostics of a Model Explainer/visual-diagnostics-of-a-model-explainer.tex
+++ b/papers/Visual Diagnostics of a Model Explainer/visual-diagnostics-of-a-model-explainer.tex
@@ -14,7 +14,7 @@
 \begin{document}
 \input{visual-diagnostics-of-a-model-explainer-concordance}
 
-\title{Visual Diagnostics of a Model Explainer -- Tools for the Assessment of LIME Explanations}
+\title{Visual Diagnostics of a Model Explainer -- Tools for the Assessment of LIME Explanations from a Random Forest Model}
 
 \author[1]{Katherine Goode*}
 
@@ -30,9 +30,9 @@
 
 \presentaddress{This is sample for present address text this is sample for present address text}
 
-\abstract[Summary]{This is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text this is sample abstract text.}
+\abstract[Summary]{This is sample abstract text.}
 
-\keywords{keyword1, keyword2, keyword3, keyword4}
+\keywords{LIME, random forest, interpretability, diagnostics}
 
 \jnlcitation{\cname{%
 \author{Goode K.}, 
@@ -44,16 +44,18 @@
 
 \section{Introduction}
 
-- main objective of a model explainer: 
-- understand and explain model performance
+Machine learning algorithms have been proven to provide accurate predictions. However, this accuracy comes at a cost. With complicated algorithms, the ability to understand the mechanism in the data and the functional form of the model are lost. This has led for a desire to be able to interpret machine learning algorithms. One approach to remedy this problem would be to develop a model explainer. The objective of such an explainer is to understand and explain model performance.
+
+LIME (locally interpretable model explanations) is one such model explainer that was developed for this purpose (reference). Conceptually, LIME 
+
 - LIME does...
-- conceptually: models at two levels
-1. Simple = explainer model
-2. Complex = original "black box model"
+  - conceptually: models at two levels
+  1. Simple = explainer model
+  2. Complex = original "black box model"
 - usually: model predictions, maybe with ground truth
-- type I error
-- type II error
-- model is wrong in both cases
+  - type I error
+  - type II error
+  - model is wrong in both cases
 - explanation is also a prediction
 - how reliable is that explanation?
 - we will present some tools that could help answer that question
