--- a/papers/Visual Diagnostics of a Model Explainer/visual-diagnostics-of-a-model-explainer.tex
+++ b/papers/Visual Diagnostics of a Model Explainer/visual-diagnostics-of-a-model-explainer.tex
@@ -1,6 +1,6 @@
 \documentclass[AMS,STIX1COL]{WileyNJD-v2}
 
-%\usepackage{amsmath,amsfonts}
+\usepackage{amsmath,amsfonts}
 
 \articletype{Article Type}%
 
@@ -24,7 +24,7 @@
 
 \address[1]{\orgdiv{Department of Statistics}, \orgname{Iowa State University}, \orgaddress{\state{Iowa}, \country{United States}}}
 
-\address[2]{\orgdiv{Center for (CSAFE}, \orgname{Iowa State University}, \orgaddress{\state{Iowa}, \country{United States}}}
+\address[2]{\orgdiv{Center for Statistics and Applications in Forensic Evidence (CSAFE)}, \orgname{Iowa State University}, \orgaddress{\state{Iowa}, \country{United States}}}
 
 \corres{*Corresponding author. \email{kgoode@iastate.edus}}
 
@@ -61,43 +61,27 @@ It does this by using the features from the training data to simulate a new data
 2. "local" explanations are not local but are driven by the ("global") marginal distributions of covariates 
 - Describe LIME including details on binning and linear regression in binned features and motivation for the binning
 
-\section{Data}
-
 \section{Methods}
 
 \subsection{LIME Algorithm}
 
-\paragraph{Notation}
+The LIME algorithm is presented in the original paper in a general context that includes cases for text classification and feature recognition. For this paper, we are only considering a situation with a binary categorical response variable and continuous feature variables. The procedure below is defined in this context. Furthermore, the implementation of LIME used in this paper is via the lime R package, and the procedure describes the methods used by the R package. This deviates a bit from the original procedure described by Riberiro, Singh, and Guestrin (2016). We attempted to highlight these deviations.
+
+Let $\textbf{X}$ be an $n$ by $p$ data matrix with $p$ features and $n$ observations.
 
 \begin{itemize}
-\item $x\in\mathbb{R}^d$: original representation of an instance being explained
-\begin{itemize}
-\item e.g. feature vector containing word embeddings
+\item $x=\left(\begin{array}{cccc}x_1 & x_2 & \hdots & x_p\end{array}\right)\in\mathbb{R}^p$: original representation of an instance being explained (e.g. observations from a set of $p$ continuous features for a specific case in the data) % the LIME paper uses d instead of p for the dimension
+\item $x'\in\mathbb{R}^{p'}$: vector for the interpretable representation of the instance being explained (e.g. a vector of indicator variables associated with the features chosen through feature selection indicating whether or not the observed value is in the bin created by LIME for the feature)
+\item $G$: class of potentially interpretable models (e.g. linear models, decision trees, rule lists)
+\item $g$: explanation model where $g:\{0,1\}^{p'}\rightarrow\mathbb{R}$ and $g\in G$
+\item $\Omega(g)$: measure of complexity of $g$ (e.g. depth of a tree, number of non-zero coefficients in a linear model fit using LASSO)
+\item $f$: model that is being explained where $f:\mathbb{R}^p\rightarrow\mathbb{R}$ (In classification $f(x)$ is the probability that $x$ belongs to a certain class)
+\item $\pi_x(z)$: proximity measure between an instance $z$ to $x$ which defines a locality around $x$
+\item $\mathcal{L}(f, g, \Pi_x)$: the fidelity funcions which is a measure of how unfaithful $g$ is in approximating $f$ in the locality defined by $\pi_x$
+\item $\xi(x)$: explanation produced by LIME where
+  $$\xi(x)=\underset{g\in G}{\arg\min} \ \mathcal{L}(f, g, \Pi_x)+\Omega(g)$$
+(i.e. want to minimize $\mathcal{L}(f, g, \Pi_x)$ and keep $\Omega(g)$ low enough to be interpretable by humans)
 \end{itemize}
-\item $x'\in\mathbb{R}^{d'}$: vector for the interpretable representation of the instance being explained
-\begin{itemize}
-\item e.g. bag of words
-\end{itemize}
-\item $G$: class of potentially interpretable models
-\begin{itemize}
-\item e.g. linear models, decision trees, rule lists
-\end{itemize}
-\item $g$: explanation model where $g:\mathbb{R}^{d'}\rightarrow\mathbb{R}$ and $g\in G$
-\item $\Omega(g)$: measure of complexity of $g$
-\begin{itemize}
-\item e.g. depth of a tree, number of non-zeros in a linear model
-\end{itemize}
-\item $f$: model that is being explained where $f:\mathbb{R}^d\rightarrow\mathbb{R}$
-\begin{itemize}
-\item note: in classification $f(x)$ is the probability that $x$ belongs to a certain class
-\end{itemize}
-\item $\Pi_x(z)$: proximity measure between an instance $z$ to $x$ which defines a locality around $x$
-\item $\mathcal{L}(f, g, \Pi_x)$: a measure of how unfaithful $g$ is in approximating $f$ in the locality defined by $\Pi_x$
-\end{itemize}
-
-\paragraph{Step by Step Procedure}
-
-Step 1: 
 
 \subsection{Application of LIME to Bullet Matching Data}
 
@@ -115,6 +99,8 @@ The LIME R package allows for the following four methods to sample the perturbat
 The methods of equally spaced bins and quantile bins also allow the user to specify the number of bins. As of now, there are no recommendations or procedures provided for how to determine which method to use. By default, LIME uses four quantile bins. It was of interest to see how the explanations from LIME varied across the four sampling methods when applied to the bullet matching data. The LIME algorithm was applied to each prediction from the test data obtained from the 'rtrees' random forest model for each of the four sampling methods. Within the bin based sampling methods, the algorithm was applied for 2 to 6 bins. It was decided to only go up to 6 bins since the more bins used the more complex the explanation becomes.
 
 \subsubsection{Proposed Bin Creation Methods}
+
+\section{Data}
 
 \section{Results}
 
