--- a/papers/Visual Diagnostics of a Model Explainer/visual-diagnostics-of-a-model-explainer.Rnw
+++ b/papers/Visual Diagnostics of a Model Explainer/visual-diagnostics-of-a-model-explainer.Rnw
@@ -25,7 +25,7 @@
 
 \address[2]{\orgdiv{Center for Statistics and Applications in Forensic Evidence (CSAFE)}, \orgname{Iowa State University}, \orgaddress{\state{Iowa}, \country{United States}}}
 
-\corres{*Corresponding author. \email{kgoode@iastate.edus}}
+\corres{*Corresponding author. \email{kgoode@iastate.edu}}
 
 \presentaddress{This is sample for present address text this is sample for present address text}
 
@@ -43,9 +43,13 @@
 
 \section{Introduction}
 
-Machine learning algorithms have been proven to provide accurate predictions. However, this accuracy comes at a cost. With complicated algorithms, the ability to understand the mechanism in the data and the functional form of the model are lost. This has led for a desire to be able to interpret machine learning algorithms. One approach to remedy this problem would be to develop a model explainer. The objective of such an explainer is to understand and explain model performance.
+Machine learning algorithms are known to provide accurate predictions. (include more about the usefulness of ml algorithms). However, this predictive ability comes at a cost. These algorithms are typically very complex and have no functional form. As a result, the ability to directly interpret the model is lost.
 
-Locally interpretable model explanations (LIME) is one such model explainer that was developed for this purpose (reference). While some model explainers are focused on understanding a model at the global level, LIME was designed to explain the model for a single prediction of interest. Conceptually, LIME fits a simple interpretable model (the explainer) that is meant to capture the behavior of the complex "black box model" in a local region around the prediction. 
+In many areas of application, the need to be able to explain the results from the model is critical. For example, in forensics science a machine learning model could be used to determine the probability that a shoe print found at the crime scene matches the shoe of a suspect. The model may return a high probability of a match, but without the ability to explain which factors in the model led to this high probability, it may be difficult for a jury to trust the results from the model when deciding whether or not to convice the suspect. (add sentence about Europe law) This has led to the desire to be able to interpret machine learning algorithms.
+
+One approach to remedy this problem would be to develop a model explainer that can provide insight into the model performance. A model explainer is a method that is separate from the model but uses the model to provide understanding into mechanism of how the model produces predictions. (try to think of a simple example of a model explainer) 
+
+Locally interpretable model explanations (LIME) is one such model explainer (reference). While some model explainers are focused on understanding a model at the global level, LIME was designed to explain the model for a single prediction of interest. Conceptually, LIME fits a simple model that is able to be interpreted, which is referred to as the explainer, that is meant to capture the behavior of the complex "black box model" in a local region around a prediction of interest. (a good place to include an image to help with this explanation)
 
 Predictive models are used in both regression and classification settings. For this paper, we will focus on the classification setting, and in particular, we will only discuss the case with a dichotomous response variable. In any case, when a predictive model is being developed, the data is usually divided into training and testing portions. The training data is used to fit the complex model, and the testing data is used to assess the model. The complex model can applied to the features in the testing data, and the resulting predictions can be compared to ground truth. Of interest during this assessment are the cases when the model is wrong. In the dichotomous response classification case, there are two ways in which the model can be wrong. The model can make a type I error in which..., or the model can make a type II error in which...
 
@@ -76,7 +80,7 @@ Let $\textbf{X}$ be an $n$ by $p$ data matrix with $p$ features and $n$ observat
 \item $\Omega(g)$: measure of complexity of $g$ (e.g. depth of a tree, number of non-zero coefficients in a linear model fit using LASSO)
 \item $f$: model that is being explained where $f:\mathbb{R}^p\rightarrow\mathbb{R}$ (In classification $f(x)$ is the probability that $x$ belongs to a certain class)
 \item $\pi_x(z)$: proximity measure between an instance $z$ to $x$ which defines a locality around $x$
-\item $\mathcal{L}(f, g, \Pi_x)$: the fidelity funcions which is a measure of how unfaithful $g$ is in approximating $f$ in the locality defined by $\pi_x$
+\item $\mathcal{L}(f, g, \Pi_x)$: the fidelity functions which is a measure of how unfaithful $g$ is in approximating $f$ in the locality defined by $\pi_x$
 \item $\xi(x)$: explanation produced by LIME where
   $$\xi(x)=\underset{g\in G}{\arg\min} \ \mathcal{L}(f, g, \Pi_x)+\Omega(g)$$
 (i.e. want to minimize $\mathcal{L}(f, g, \Pi_x)$ and keep $\Omega(g)$ low enough to be interpretable by humans)
@@ -105,9 +109,9 @@ The methods of equally spaced bins and quantile bins also allow the user to spec
 
 \subsection{LIME Package Explanations Dependent on Sampling Method}
 
-In order to assess the LIME explanations created using different sampling methods, it was of interest to compare the top three features chosen as the important predictors by lime within a case from the test data across the diferent sampling methods. Figure ... is a heatamp showing the top feature chosen by lime for each of the cases in the test data and different bin based sampling methods. The rows represent the cases in the test data, and the columns represent the sampling methods. There are twenty methods included in the plot. These include the equally spaced bins and quantile bins from the lime package and the random forest score tree based bins and the same source tree based bins proposed in this paper. The rows are facetted by the test set and whether or not the observation is a match or not. The columns are faceted by these methods, and the columns within a facet represent the number of bins. Each method has 2 to 6 bins. The colors represent the top feature chosen by lime.
+In order to assess the LIME explanations created using different sampling methods, it was of interest to compare the top three features chosen as the important predictors by lime within a case from the test data across the different sampling methods. Figure ... is a heatamp showing the top feature chosen by lime for each of the cases in the test data and different bin based sampling methods. The rows represent the cases in the test data, and the columns represent the sampling methods. There are twenty methods included in the plot. These include the equally spaced bins and quantile bins from the lime package and the random forest score tree based bins and the same source tree based bins proposed in this paper. The rows are faceted by the test set and whether or not the observation is a match or not. The columns are faceted by these methods, and the columns within a facet represent the number of bins. Each method has 2 to 6 bins. The colors represent the top feature chosen by lime.
 
-The variables of ccf and cms immediately show up as common variables chosen across all of the sampling methods. However, the patterns across the number of bins withing the sampling methods are different. When equally spaced bins are used, the top feature chosen is consistent across all cases within a number of bins category. For example, ccf is almost always chosen (change to actual number) with 2 equally spaced bins, matches is almost always chosen with 3 equally spaced bins, and non\_cms is always chosen for the nonmatches with 5 and 6 equally spaced bins. This shows that with the bullet matching data, the top feature chosen with equally spaced bins is an artifact of the number of bins used. With equally spaced bins, this figure sugggest that LIME is providing global explanations as opposed to local explanations. It would be preferable that the top feature chosen was more consistent across the number of bins and more variable across the cases. This would suggest that the top feature chosen is dependent on the feature values associated with a particular case and not just on which feature is the best explainer when $b$ number of bins are used.
+The variables of ccf and cms immediately show up as common variables chosen across all of the sampling methods. However, the patterns across the number of bins withing the sampling methods are different. When equally spaced bins are used, the top feature chosen is consistent across all cases within a number of bins category. For example, ccf is almost always chosen (change to actual number) with 2 equally spaced bins, matches is almost always chosen with 3 equally spaced bins, and non\_cms is always chosen for the nonmatches with 5 and 6 equally spaced bins. This shows that with the bullet matching data, the top feature chosen with equally spaced bins is an artifact of the number of bins used. With equally spaced bins, this figure suggest that LIME is providing global explanations as opposed to local explanations. It would be preferable that the top feature chosen was more consistent across the number of bins and more variable across the cases. This would suggest that the top feature chosen is dependent on the feature values associated with a particular case and not just on which feature is the best explainer when $b$ number of bins are used.
 
 %\backmatter
 
