--- a/papers/Visual Diagnostics of a Model Explainer/visual-diagnostics-of-a-model-explainer.tex
+++ b/papers/Visual Diagnostics of a Model Explainer/visual-diagnostics-of-a-model-explainer.tex
@@ -44,25 +44,19 @@
 
 \section{Introduction}
 
-Machine learning models have been proven to provide accurate predictions in many areas of applications. Carriquiry et. al. (source) discuss improvement in various pattern recognition analyses in the forensics sciences with the use of random forests and neural networks. (need a source) describe the numerous ways machine learning has been used in the medical field to advance healthcare. However, this predictive ability comes at a cost. 
+Machine learning models have been proven to provide accurate predictions in many areas of applications. Carriquiry et. al. (source) discuss the use of pattern recognition analyses in the forensics sciences to determine whether two bullets were fired from the same gun with the use of a random forests model. Yu, Beam, and Kohane (2018) describe how machine learning has advanced healthcare in ways such as automated medical image diagnoses with neural networks and predictions of clinical outcomes with Bayesian networks. This impressive predictive ability, however, comes at a cost.
 
-These models are typically complex and have no simple functional form. As a result, the ability to directly interpret the model is lost. In many areas of application such as with forensics science and healthcare, the need to be able to explain the results from the model is critical. For example, a machine learning model could be used to determine the probability that a shoe print found at the crime scene matches the shoe belonging to a suspect in the investigation. The model may return a high probability of a match, but without the ability to explain which factors in the model led to this high probability, it may be difficult for a jury to trust the results from the model when deciding whether to convict the suspect. (add sentence about Europe law) The importance of interpretability has led to the desire to be able to explain the output from machine learning algorithms.
+These models are typically complex and lack a functional form, so the ability to directly interpret the model is lost. As a result, machine learning models often get referred to as black boxes. In many areas of application, such as forensics science and healthcare, the need to be able to explain the results from the model is critical. For example, a machine learning model could be used to determine the probability that a shoe print found at the crime scene matches the shoe belonging to a suspect in the investigation. The model may return a high probability of a match, but without the ability to explain which factors in the model led to this high probability, it may be difficult for a jury to trust the results from the model when deciding whether to convict the suspect. (add sentence about Europe law) The need for interpretability has led to the desire to be able to explain the output from machine learning algorithms.
 
-One approach to remedy this problem would be to develop a model explainer that can provide insight into the performance of the complex model. A model explainer is a method that is separate from the model but uses the model to provide understanding into mechanism of how the model produces predictions. (try to think of a simple example of a model explainer) (mention some of the model explainers that have been developed recently)
+One approach to remedy this problem is to develop a model explainer that can provide insight into the performance of the complex model. A model explainer is a method that is separate from the model but uses the model to provide understanding into mechanism of how the model produces predictions. (try to think of a simple example of a model explainer) (mention some of the model explainers that have been developed recently)
 
-LIME (local interpretable model explanations) is one such model explainer (reference). While some model explainers are focused on understanding a model at the global level, LIME was designed to explain the model at the local level for a single prediction of interest. Conceptually, LIME fits a simple model that can be interpreted, referred to as the explainer, that is meant to capture the behavior of the complex "black box model" in a local region around the prediction of interest. (a good place to include an image to help with this explanation)
+LIME (local interpretable model explanations) is one such model explainer (reference). While some model explainers are focused on understanding a model at the global level, LIME was designed to explain the model at the local level for a single prediction of interest. Conceptually, LIME fits a simple interpretable model, referred to as the explainer, that is meant to capture the behavior of the complex "black box model" in a local region around a prediction of interest. (a good place to include an image to help with this explanation)
 
-- explanation is also a prediction/model
-  - how reliable is that explanation?
-  - also, no current recommendations for LIME algorithm input options
-
-Predictive models are used in both regression and classification settings. For this paper, we will focus on the classification setting, and in particular, we will only discuss the case with a dichotomous response variable. In any case, when a predictive model is being developed, the data is usually divided into training and testing portions. The training data is used to fit the complex model, and the testing data is used to assess the model. The complex model can applied to the features in the testing data, and the resulting predictions can be compared to ground truth. Of interest during this assessment are the cases when the model is wrong. In the dichotomous response classification case, there are two ways in which the model can be wrong. The model can make a type I error in which..., or the model can make a type II error in which...
-
-- we will present some tools that could help answer that question
-- we will show an example using this tools (bullet data)
-- we will mention some possible insights about LIME that these tools have shown us
+The explanation that is produced from the explainer is also a prediction or an element of a model. Since it is not directly extracted from the complex model, it is important to ask the question, ``How reliable is the explanation?". Currently, there are no recommendations for how to assess the explanations from LIME (need to check to make sure this is a true statement). In this paper, we will present some tools that could help answer that question for LIME. Additionally, we will show an example using these tools on a forensics bullet matching dataset, and we will discuss how the results from the example provide some possible insights into the workings of LIME.
 
 \section{Methods}
+
+Predictive models are used in both regression and classification settings. For this paper, we will focus on the classification setting, and in particular, we will only discuss the case with a dichotomous response variable. In any case, when a predictive model is being developed, the data is usually divided into training and testing portions. The training data is used to fit the complex model, and the testing data is used to assess the model. The complex model can applied to the features in the testing data, and the resulting predictions can be compared to ground truth. Of interest during this assessment are the cases when the model is wrong. In the dichotomous response classification case, there are two ways in which the model can be wrong. The model can make a type I error in which..., or the model can make a type II error in which...
 
 \subsection{Overview of LIME}
 
