--- a/papers/Visual Diagnostics of a Model Explainer/visual-diagnostics-of-a-model-explainer.tex
+++ b/papers/Visual Diagnostics of a Model Explainer/visual-diagnostics-of-a-model-explainer.tex
@@ -44,7 +44,7 @@
 
 \section{Introduction}
 
-Machine learning models have been proven to provide accurate predictions in many areas of applications. Carriquiry et. al. (source) discuss the use of pattern recognition analyses in the forensics sciences to determine whether two bullets were fired from the same gun with the use of a random forests model. Yu, Beam, and Kohane (2018) describe how machine learning has advanced healthcare in ways such as automated medical image diagnoses with neural networks and predictions of clinical outcomes with Bayesian networks. This impressive predictive ability, however, comes at a cost.
+Machine learning models have been proven to provide accurate predictions in many areas of applications. Carriquiry et al. (2019) discuss the use of pattern recognition analyses in the forensics sciences to determine whether two bullets were fired from the same gun with the use of a random forests model. Yu, Beam, and Kohane (2018) describe how machine learning has advanced healthcare in ways such as automated medical image diagnoses with neural networks and predictions of clinical outcomes with Bayesian networks. This impressive predictive ability, however, comes at a cost.
 
 These models are typically complex and lack a functional form, so the ability to directly interpret the model is lost. As a result, machine learning models often get referred to as black boxes. In many areas of application, such as forensics science and healthcare, the need to be able to explain the results from the model is critical. For example, a machine learning model could be used to determine the probability that a shoe print found at the crime scene matches the shoe belonging to a suspect in the investigation. The model may return a high probability of a match, but without the ability to explain which factors in the model led to this high probability, it may be difficult for a jury to trust the results from the model when deciding whether to convict the suspect. (add sentence about Europe law) The need for interpretability has led to the desire to be able to explain the output from machine learning algorithms.
 
